selection and player change

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <body>
 
     <h3>The Current Player Is: PLayer:<span id="current-player">1</span></h3>
+    <h3 id="result"></h3>
     
    
 <div class="grid">
@@ -57,15 +58,14 @@
     <div></div>
     <div></div>
     <div></div>
+    <div></div>
     <div class="taken"></div>
     <div class="taken"></div>
     <div class="taken"></div>
     <div class="taken"></div>
     <div class="taken"></div>
     <div class="taken"></div>
-    <div class="taken"></div>
-    <div class="taken"></div>
-    
+   
  
 </div>
 </body>
