--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 
-    <h3>The Current Player Is: PLayer:<span id="current-player">1</span></h3>
+    <h3>The current Player is: Player <span id="current-player">1</span></h3>
     <h3 id="result"></h3>
     
    
